--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -3904,5 +3904,16 @@
         <target>Valor activo</target>
       </segment>
     </unit>
+    <unit id="PhzdczW" name="Eskortierte Bürger teleportieren">
+      <notes>
+        <note category="german">Eskortierte Bürger teleportieren</note>
+        <note category="from">twig:///templates/ajax/admin/widget/controls.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Eskortierte Bürger teleportieren</source>
+        <target>Eskortierte Bürger teleportieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
