--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9231,5 +9231,15 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target><![CDATA[Du greifst einen Zombie mit {item} an, aber er <strong>geht einfach nicht zu Boden</strong> und kommt weiter auf dich zu.]]></target>
       </segment>
     </unit>
+    <unit id="TNGA5Rl">
+      <notes>
+        <note category="german">Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}&lt;strong&gt;Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.&lt;/strong&gt;</note>
+        <note category="from">db://ItemAction</note>
+      </notes>
+      <segment>
+        <source>Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}&lt;strong&gt;Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.&lt;/strong&gt;</source>
+        <target><![CDATA[The citizen greedily gulps down their ration of water, without tasting it in the least... Their throat still burns as much, but at least they aren't dehydrated anymore...{hr}<strong>Their APs have not been restored because they were dehydrated.</strong>]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
