--- a/translations/soul+intl-icu.de.xlf
+++ b/translations/soul+intl-icu.de.xlf
@@ -2384,5 +2384,11 @@
         <target>Diese Stadt stammt aus der Alpha-Phase von MyHordes. Die angezeigten Informationen sind daher möglicherweise unvollständig oder sehen nicht so aus, wie du es sonst erwarten würdest.</target>
       </segment>
     </unit>
+    <unit id="vgT9Zpn" name="Alte Auszeichnungen">
+      <segment>
+        <source>Alte Auszeichnungen</source>
+        <target>Alte Auszeichnungen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
