ES Translation TP

--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -3912,7 +3912,7 @@
       </notes>
       <segment>
         <source>Eskortierte Bürger teleportieren</source>
-        <target>Eskortierte Bürger teleportieren</target>
+        <target>Teletransportar habitantes escoltados</target>
       </segment>
     </unit>
   </file>
