ES Translation, Town Info

--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3864,7 +3864,7 @@
       </notes>
       <segment>
         <source>Diese Stadt stammt aus der Alpha-Phase von MyHordes. Die angezeigten Informationen sind daher möglicherweise unvollständig oder sehen nicht so aus, wie du es sonst erwarten würdest.</source>
-        <target>Diese Stadt stammt aus der Alpha-Phase von MyHordes. Die angezeigten Informationen sind daher möglicherweise unvollständig oder sehen nicht so aus, wie du es sonst erwarten würdest.</target>
+        <target>Este pueblo proviene de la fase alfa de MyHordes. Por lo tanto, la información que se muestra puede estar incompleta o no ser lo que usted esperaría.</target>
       </segment>
     </unit>
   </file>
